k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: todo
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: todo
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
